# acikpoz

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  SECURITY.md  pyproject.toml  server.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
src/acikpoz/: __init__.py  cli.py  diff.py  mcp_server.py  model.py  parser.py  validate.py
tests/: test_cli.py  test_diff.py  test_mcp_tools.py  test_model.py  test_parser.py  test_validate.py
